MetrialDesign-5 Refactor package name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MatrialDesign</string>
+    <string name="app_name">MaterialDesign</string>
     <string name="shared_item">SharedItem</string>
     <string name="title_activity_detail">DetailActivity</string>
 
